--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,4 +1,5 @@
 .App-header {
+	z-index: 1;
 	padding: 0px;
 	height: 48px;
 	-webkit-box-shadow: 0 3px 4px 0 rgba(0,0,0,0.14), 0 3px 3px -2px rgba(0,0,0,0.12), 0 1px 8px 0 rgba(0,0,0,0.2);
@@ -72,81 +73,13 @@
 	width: 28px;
 	border-radius: 50%;	
 }
-#content-menu{
-	height: auto;
-	width: 256px;
-	position: fixed;
-	margin-top: 48px;
-	bottom: 0px;
-	top: 0px;
-	left: 0px;
-
-	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	align-items: stretch;
-    -webkit-transform: translateX(-256px);
-    transform: translateX(-256px);
-    -webkit-transition: -webkit-transform .15s ease-in-out;
-    transition: transform .15s ease-in-out;
-
-	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2); 	
-}
-#content-menu.in {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+.link-dropdown a {
+	display: block;
+	width: 100%
 }
 
-#menu{
-	position: relative;
-	width: 256px;
-	margin-top: 100px;
-	flex: 1 1 auto;
-	display: flex;
-	flex-direction: column;
-	overflow-x: hidden;
-	overflow-y: auto;
-    white-space: nowrap;
-    background: #fff;
-    vertical-align: middle;
-    line-height: 30px;
-    bottom: 100px
-}
-#menu p{
-	margin: 0px;
-	padding: 0 24px;
-	color: rgba(0,0,0,0.54);
-}
-
-#menu li {
-	padding: 0 24px;
-}
-#menu li:hover {
-	background-color: #ccc;
-}
-#menu a {
-	text-decoration: none;
-	color: rgba(0,0,0,0.54);
-	font-weight: 500;
-	font-size: 16px;
-}
-.menu-footer {
-	background-color: #fff;
-	position: fixed;
-	bottom: 0px;
-	height: 100px;
-	width: 256px;
-	border-top: 1px solid #ccc;
-	border-right: 1px solid #ccc;
-	display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-}
-.menu-footer p {
-	margin-top: 16px;
-	margin-left: 20px;
-}
-.menu-footer img {
-	margin-left: 20px;
+@media (max-width: 33.9em){
+	.right {
+		margin-right: 0px;
+	}
 }
