--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -61,6 +61,9 @@
 	padding: 0px;
 	height: 18px;
 }
+.title-link{
+	padding: 0px!important;
+}
 #menu{
 	position: relative;
 	width: 256px;
@@ -76,7 +79,7 @@
 }
 #menu p{
 	margin: 0px;
-	padding: 0 24px;
+	padding: 0 15px;
 	color: rgba(0,0,0,0.54);
 }
 
@@ -110,7 +113,7 @@
 	margin-left: 20px;
 }
 .menu-footer img {
-	margin-left: 20px;
+	margin-left: 10px;
 }
 #collapse-menu{
 	display: block;
@@ -120,8 +123,25 @@
 	overflow-y: auto;
 	margin-top: 0px;
 }
-
+.link-menu-footer{
+	display: inline-block!important;
+	padding: 0px!important;
+	text-decoration: none!important;
+	color: rgba(0,0,0,0.54)!important;
+	font-size: 14px!important;
+	font-weight: 400!important
+}
+.link-menu-footer:focus, .link-menu-footer:hover {
+    color: #014c8c!important;
+    text-decoration: underline!important;
+}
+/*.collapse-brand-movil span {
+	background-image: url('data:image/svg+xml;charset=utf8,%3Csvg viewBox="0 0 32 32" xmlns="http://ww…p="round" stroke-miterlimit="10" d="M4 8h24M4 16h24M4 24h24"/%3E%3C/svg%3E')!important;
+}*/
 @media (max-width: 33.9em){
+	.title {
+		margin-left: 0px;
+	}
 	#content-menu{
 		z-index: 3;
 		margin-top: 0px;
